--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,16 @@ uuid = "4ad56de4-0342-4c02-9694-ab2f23251d8c"
 authors = ["Michael Kraus <michael.kraus@ipp.mpg.de> and contributors"]
 version = "0.1.0"
 
+[deps]
+CompactBasisFunctions = "a09551c4-f815-4143-809e-dd1986753ba7"
+GeometricIntegrators = "dcce2d33-59f6-5b8d-9047-0defad88ae06"
+Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
+Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
+QuadratureRules = "a08977f5-a20d-4b99-b11f-f5ea535e0575"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
+
 [compat]
 julia = "1.6"
 
