--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ CompactBasisFunctions = "a09551c4-f815-4143-809e-dd1986753ba7"
 ContinuumArrays = "7ae1f121-cc2c-504b-ac30-9b923412ae5c"
 GeometricIntegrators = "dcce2d33-59f6-5b8d-9047-0defad88ae06"
 GeometricMachineLearning = "194d25b2-d3f5-49f0-af24-c124f4aa80cc"
+KernelAbstractions = "63c18a36-062a-441e-b654-da1e3ab1ce7c"
 Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
 Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
 QuadratureRules = "a08977f5-a20d-4b99-b11f-f5ea535e0575"
