--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ GeometricMachineLearning = "194d25b2-d3f5-49f0-af24-c124f4aa80cc"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
 Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 QuadratureRules = "a08977f5-a20d-4b99-b11f-f5ea535e0575"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SimpleSolvers = "36b790f5-6434-4fbe-b711-1f64a1e2f6a2"
