--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ AbstractNeuralNetworks = "60874f82-5ada-4c70-bd1c-fa6be7711c8a"
 BSplineKit = "093aae92-e908-43d7-9660-e50ee39d5a0a"
 CompactBasisFunctions = "a09551c4-f815-4143-809e-dd1986753ba7"
 ContinuumArrays = "7ae1f121-cc2c-504b-ac30-9b923412ae5c"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 GeometricIntegrators = "dcce2d33-59f6-5b8d-9047-0defad88ae06"
 GeometricMachineLearning = "194d25b2-d3f5-49f0-af24-c124f4aa80cc"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -19,12 +20,15 @@ SimpleSolvers = "36b790f5-6434-4fbe-b711-1f64a1e2f6a2"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 SymbolicNeuralNetworks = "aed23131-dcd0-47ca-8090-d21e605652e3"
+Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 AbstractNeuralNetworks = "0.4.0, 0.5"
 BSplineKit = "0.18.0"
+ForwardDiff = "0.10.38"
 SymbolicNeuralNetworks = "0.2.0"
+Symbolics = "6.29.2"
 julia = "1.11"
 
 [extras]
