--- a/Project.toml
+++ b/Project.toml
@@ -24,12 +24,7 @@ Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
-AbstractNeuralNetworks = "0.4.0, 0.5"
-BSplineKit = "0.18.0"
-ForwardDiff = "0.10.38"
-SymbolicNeuralNetworks = "0.2.0"
-Symbolics = "6.29.2"
-julia = "1.11"
+GeometricIntegrators = "0.14.5"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
