--- a/Project.toml
+++ b/Project.toml
@@ -11,9 +11,11 @@ ContinuumArrays = "7ae1f121-cc2c-504b-ac30-9b923412ae5c"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 GeometricIntegrators = "dcce2d33-59f6-5b8d-9047-0defad88ae06"
 GeometricMachineLearning = "194d25b2-d3f5-49f0-af24-c124f4aa80cc"
+GeometricProblems = "18cb22b4-ad41-5c80-9c5f-710df63fbdc9"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
 Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 QuadratureRules = "a08977f5-a20d-4b99-b11f-f5ea535e0575"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SimpleSolvers = "36b790f5-6434-4fbe-b711-1f64a1e2f6a2"
@@ -25,6 +27,8 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 GeometricIntegrators = "0.14.5"
+GeometricProblems = "0.6.8"
+Plots = "1.40.13"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
