--- a/Project.toml
+++ b/Project.toml
@@ -27,6 +27,7 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 GeometricIntegrators = "0.14.5"
+GeometricProblems = "0.6.6"
 Plots = "1.40.13"
 
 [extras]
