--- a/Project.toml
+++ b/Project.toml
@@ -28,9 +28,9 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 CairoMakie = "0.13.10"
-GeometricIntegrators = "0.14.5"
-GeometricProblems = "0.6.6"
-Plots = "1.40.14"
+GeometricIntegrators = "0.14.11"
+GeometricMachineLearning = "0.4.4"
+GeometricProblems = "0.6.10"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
